# cc-haha

./: AGENTS.md  makefile  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build-desktop-dev.yml  deploy-docs.yml  release-desktop.yml
adapters/common/: http-client.ts
adapters/feishu/: index.ts
desktop/: README_PACK_MACOS.md  install-all-macos.sh  install-macos.sh  pack-macos.sh  package.json
desktop/scripts/: build-macos-arm64.sh  build-sidecars.ts  e2e-rewind-agent-browser.sh  e2e-rewind-complex-agent-browser.sh
desktop/sidecars/: claude-sidecar.ts  launcherRouting.test.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/__tests__/: agentsSettings.test.tsx  generalSettings.test.tsx  mcpSettings.test.tsx  pages.test.tsx  skillsSettings.test.tsx
desktop/src/api/: client.ts  mcp.ts  plugins.ts  sessions.ts  skills.ts  terminal.ts  websocket.test.ts  websocket.ts
desktop/src/hooks/: useKeyboardShortcuts.ts
desktop/src/lib/: desktopRuntime.ts
desktop/src/pages/: ActiveSession.test.tsx  ActiveSession.tsx  AdapterSettings.tsx  ComputerUseSettings.tsx  EmptySession.tsx  McpSettings.tsx  Settings.tsx  TerminalSettings.test.tsx  (+1 more)
docs/: index.md
docs/en/: index.md
release-notes/: v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md
runtime/: requirements-win.txt  requirements.txt
src/: main.tsx
src/server/: index.ts  router.ts
src/utils/: thinking.ts
(+107 files in other folders)
